Modify audio player CSS to keep stop control visible while playing

--- a/PromoStudio.Web/Content/less/all.less
+++ b/PromoStudio.Web/Content/less/all.less
@@ -947,7 +947,8 @@ input[type="submit"] {
         margin: 0 15px 0 0;
         display: none;
     }
-
+    
+    .list-of-audio .btn-play.playing,
     .list-of-audio .hover .btn-play {
         display: block;
     }
@@ -1067,9 +1068,9 @@ input[type="submit"] {
         background: #000 url(../images/btn-play2.png) no-repeat 50% 50%;
         background: rgba(0, 0, 0, 0.62) url(../images/btn-play2.png) no-repeat 50% 50%;
     }
-
-        .voice-block .list-of-audio .hover .btn-play2.playing,
-        .list-of-audio .image .btn-play2.playing:hover {
+    
+        .voice-block .list-of-audio .btn-play2.playing,
+        .list-of-audio .image .btn-play2.playing {
             background: #000 url(../images/btn-stop2.png) no-repeat 50% 50%;
             background: rgba(0, 0, 0, 0.62) url(../images/btn-stop2.png) no-repeat 50% 50%;
         }
